--- a/hugo.toml
+++ b/hugo.toml
@@ -1,12 +1,10 @@
-######################## default configuration ####################
-# The base URL of your site (required). This will be prepended to all relative URLs.
-baseURL = "https://example.org"
-# Title of your website (required).
+######################## Default Configuration ####################
+
+baseURL = "https://pedrofernandss.github.io"
 title = "Pedro Fernandes' Blog"
-# Your theme name
-# theme = "hugoplate"
-# Default time zone for time stamps; use any valid tz database name: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
-timeZone = "America/New_York"
+theme = "hugoplate"
+timeZone = "America/Sao_Paulo"
+
 # post excerpt
 summaryLength = 10 # see https://gohugo.io/content-management/excerpts/
 # disable language
