--- a/hugo.toml
+++ b/hugo.toml
@@ -1,22 +1,36 @@
 ######################## Default Configuration ####################
 
 baseURL = "https://pedrofernandss.github.io/"
-title = "Pedro Fernandes' Blog"
 theme = "hugoplate"
 timeZone = "America/Sao_Paulo"
+# Esta linha é importante para ter URLs como .../ e .../pt-br/
+defaultContentLanguageInSubdir = true
 
-# post excerpt
-summaryLength = 10 # see https://gohugo.io/content-management/excerpts/
-# disable language
-disableLanguages = [
-] # example: ["fr"] for disable french language. see https://gohugo.io/content-management/multilingual/
-hasCJKLanguage = false #  If hasCJKLanguage true, auto-detect Chinese/Japanese/Korean Languages in the content. see: https://gohugo.io/getting-started/configuration/#hascjklanguage
-# default language
-defaultContentLanguage = 'en'
-# defaultContentLanguageInSubdir need to be true if you want to use the language code as a subdirectory and language specific 404 page
-defaultContentLanguageInSubdir = false
+# Define o inglês como o idioma padrão
+defaultContentLanguage = "en"
+
+# Define os idiomas disponíveis
+[languages]
+  # Configurações para o Inglês
+  [languages.en]
+    languageName = "English"
+    languageCode = "en"
+    contentDir = "content/english" 
+    title = "Fernandes' Blog"
+    weight = 1 
+
+  # Configurações para o Português do Brasil
+  [languages.pt-br]
+    languageName = "Português"
+    languageCode = "pt-br"
+    contentDir = "content/portuguese" 
+    title = "Blog do Fernandes"
+    weight = 2
+
+summaryLength = 10 
 
 ########################### Services #############################
+
 [services]
 [services.googleAnalytics]
 ID = 'G-MEASUREMENT_ID' # see https://gohugo.io/templates/internal/#configure-google-analytics
@@ -25,11 +39,13 @@ ID = 'G-MEASUREMENT_ID' # see https://gohugo.io/templates/internal/#configure-go
 shortname = 'themefisher-template' # we use disqus to show comments in blog posts . To install disqus please follow this tutorial https://portfolio.peter-baumgartner.net/2017/09/10/how-to-install-disqus-on-hugo/
 
 ########################## Permalinks ############################
+
 [permalinks.page]
 "pages" = "/:slugorcontentbasename/"
 
 
 ########################## Pagination ############################
+
 [pagination]
 disableAliases = false
 pagerSize = 10
@@ -37,6 +53,7 @@ path = 'page'
 
 
 ############################# Build ##############################
+
 [build]
 [build.buildStats]
 enable = true
@@ -45,6 +62,7 @@ source = 'assets/notwatching/hugo_stats\.json'
 target = 'css'
 
 ############################# Modules ############################
+
 [module]
 [[module.mounts]]
 source = 'assets'
@@ -56,10 +74,12 @@ target = 'assets/notwatching/hugo_stats.json'
 
 
 ############################# Outputs ############################
+
 [outputs]
 home = ["HTML", "RSS", "WebAppManifest", "SearchIndex"]
 
 ############################# Imaging ############################
+
 [imaging]
 # See https://github.com/disintegration/imaging
 # Default JPEG or WebP quality setting. Default is 75.
@@ -67,6 +87,7 @@ quality = 80
 resampleFilter = "Lanczos"
 
 ############################ Caches ##############################
+
 [caches]
 [caches.images]
 dir = ":resourceDir/_gen"
@@ -78,6 +99,7 @@ maxAge = "720h"
 
 
 ############################ Markup ##############################
+
 [markup]
 [markup.goldmark.renderer]
 unsafe = true
@@ -93,12 +115,14 @@ ordered = true
 
 
 ########################### Media types ###########################
+
 [mediaTypes]
 [mediaTypes."application/manifest+json"]
 suffixes = ["webmanifest"]
 
 
 ########################### Output Format ##########################
+
 [outputFormats]
 [outputFormats.WebAppManifest]
 mediaType = "application/manifest+json"
