--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/hugoplate"]
 	path = themes/hugoplate
-	url = https://github.com/zeon-studio/hugoplate.git
+	url = https://github.com/zeon-io/hugoplate.git
