--- a/config/_default/module.toml
+++ b/config/_default/module.toml
@@ -32,8 +32,8 @@ path = "github.com/gethugothemes/hugo-modules/adsense"
 [[imports]]
 path = "github.com/gethugothemes/hugo-modules/accordion"
 
-[[imports]]
-path = "github.com/gethugothemes/hugo-modules/table-of-contents"
+# [[imports]]
+# path = "github.com/gethugothemes/hugo-modules/table-of-contents"
 
 [[imports]]
 path = "github.com/gethugothemes/hugo-modules/tab"
